fix jumps in background and menu

--- a/style.css
+++ b/style.css
@@ -9,8 +9,6 @@
     font-family: 'EB Garamond', serif;
     letter-spacing: 1px;
     background: url('img/background_wood.gif');
-    background-size: cover;
-    background-attachment: fixed;
     color: #000000;
     height: 100%;
   }
@@ -77,7 +75,8 @@
       position: relative;
       max-width: 800px;
       width: 100%;
-      height: 50vh;
+      height: 300px; /* or use media queries for scaling */
+      max-height: 50vh;
       margin: 40px auto;
       overflow: hidden;
       display: flex;
